--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 					</div>
 					<div class="person-footer">
 						<p>This page is powered by <em>Yi Song</em></p>
-						<p>Updated on <span class="footer">Aug 28, 2025</span>.</p>
+						<p>Updated on <span class="footer">Nov 20, 2025</span>.</p>
 					</div>
 				</div>
 			</div>
@@ -48,7 +48,7 @@
 				<div class="biography-sect">
 					<h6><img src="img/profile.png" class="section-icon">Biography</h6>
 					<p> 
-						Dr. Yi Song is currently a HongYi Postdoc Research Fellow (弘毅博士后) in School of Computer Science, Wuhan University, China, working with Prof. <a href="https://cs.whu.edu.cn/info/1019/2892.htm" target="_blank"> Bo Du</a> and Prof. <a href="http://xiaoyuanxie.github.io" target="_blank">Xiaoyuan Xie</a>. He is also a member of <a href="http://cstar.whu.edu.cn/en/index.html" target="_blank">CSTAR</a> - Centre of Software Testing, Analysis, and Reliability. His research interests mainly include software testing, debugging, program analysis, and search-based software engineering. Any cooperation is warmly welcomed, and more information can be found at <a href="https://github.com/yisongy" target="_blank">GitHub</a> and <a href="https://scholar.google.com/citations?hl=zh-CN&user=WHxYAi8AAAAJ" target="_blank">Google Scholar</a>.
+						Dr. Yi Song is currently a HongYi Postdoc Research Fellow (弘毅博士后) in School of Computer Science, Wuhan University, China, working with Prof. <a href="https://cs.whu.edu.cn/info/1019/2892.htm" target="_blank"> Bo Du</a> and Prof. <a href="http://xiaoyuanxie.github.io" target="_blank">Xiaoyuan Xie</a>. He is also a member of <a href="http://cstar.whu.edu.cn/en/index.html" target="_blank">CSTAR</a> - Centre of Software Testing, Analysis, and Reliability. His research interests mainly include intelligent software debugging and software security. Any cooperation is warmly welcomed, and more information can be found at <a href="https://github.com/yisongy" target="_blank">GitHub</a> and <a href="https://scholar.google.com/citations?hl=zh-CN&user=WHxYAi8AAAAJ" target="_blank">Google Scholar</a>.
 					</p>
 					<p>	
 						He received his Ph.D. degree in Software Engineering from Wuhan University in 2024. He received his B.Sc. and M.Phil. degrees in Computer Science from China Three Gorges University in 2018 and 2020, respectively, and received his dual bachelor's degree from Communication University of China in 2018.
@@ -88,10 +88,10 @@
 						<li class="">
 							<u>Yi Song</u>, Dongchen Xie, Lin Xu, He Zhang, Chunying Zhou and Xiaoyuan Xie.
 							<strong><em>Not Every Patch is an Island: LLM-Enhanced Identification of Multiple Vulnerability Patches.</em></strong> 
-							2025 40th IEEE/ACM International Conference on Automated Software Engineering (ASE’25) <font color = "blue">[CCF-A]</font> <span class="badge badge-danger">New</span>
+							2025 40th IEEE/ACM International Conference on Automated Software Engineering (ASE’25) <font color = "blue">[CCF-A]</font> <img src="img/trophy.png" class="section-icon"><font color="#FF0000"><em>ACM Sigsoft Distinguished Paper Award</em></font> <span class="badge badge-danger">New</span>
 						</li>
 						<li class="">
-							Xihao Zhang, <u>Yi Song</u> (co-first author), Xiaoyuan Xie, Qi Xin and Chenliang Xing. 
+							Xihao Zhang, <u>Yi Song (co-first author)</u>, Xiaoyuan Xie, Qi Xin and Chenliang Xing. 
 							<strong><em>Do not neglect what's on your hands: localizing software faults with exception trigger stream.</em></strong> 
 							2024 39th IEEE/ACM International Conference on Automated Software Engineering (ASE’24) <font color = "blue">[CCF-A]</font> <a href="paper/ASE2024.pdf">[PDF]</a> <a href="https://dl.acm.org/doi/10.1145/3691620.3695479">[HTML]</a> <img src="img/trophy.png" class="section-icon"><font color="#FF0000"><em>ACM Sigsoft Distinguished Paper Award</em></font>
 						</li>
@@ -127,7 +127,10 @@
 					<h6><img src="img/services.png" class="section-icon">Academic Services</h4>
 					<ul class="paper">
 						<li>
-							<span class="award-tag">PC member</span> of the Tool and Demonstration Track of <a href="https://conf.researchr.org/track/icpc-2026/icpc-2026-tool-demonstration">ICPC2026</a>
+							<span class="award-tag">PC member</span> of the Technical Track of <a href="https://www.sigapp.org/sac/sac2026/">SAC 2026</a>
+						</li>
+						<li>
+							<span class="award-tag">PC member</span> of the Tool and Demonstration Track of <a href="https://conf.researchr.org/track/icpc-2026/icpc-2026-tool-demonstration">ICPC 2026</a>
 						</li>
 						<li>
 							<span class="award-tag">PC member</span> of the Research Track of <a href="https://conf.researchr.org/track/saner-2026/saner-2026-papers">SANER 2026</a>
@@ -139,7 +142,7 @@
 							<span class="award-tag">PC member</span> of the Short Papers and Posters Track of <a href="https://conf.researchr.org/home/saner-2025" target="_blank">SANER 2025</a>
 						</li>
 						<li>
-							<span class="award-tag">PC member</span> of the Software Engineering Track of <a href="https://www.sigapp.org/sac/sac2025/" target="_blank">SAC 2025</a>
+							<span class="award-tag">PC member</span> of the Technical Track of <a href="https://www.sigapp.org/sac/sac2025/" target="_blank">SAC 2025</a>
 						</li>
 						<li>
 							<span class="award-tag">PC member</span> of the Tool Demo Track of <a href="https://conf.researchr.org/home/icpc-2025" target="_blank">ICPC 2025</a>
@@ -161,6 +164,9 @@
 							<span class="award-tag">[2025] </span>获国家自然科学基金青年基金项目资助
 						</li>
 						<li>
+							<span class="award-tag">[2025] </span>入选湖北省博士后创新人才培养项目
+						</li>
+						<li>
 							<span class="award-tag">[2024] </span>入选湖北省博士后尖端人才引进计划
 						</li>
 						<li>
@@ -180,12 +186,16 @@
 					<h6><img src="img/award.png" class="section-icon">Awards</h4>
 					<ul class="paper">
 						<li>
-							<span class="award-tag">[2024] The Second-class Prize of the Graduate Academic Innovation Award </span> (Wuhan University)
-							<br>&emsp;&emsp;&emsp;武汉大学研究生学术创新二等奖
+							<span class="award-tag">[2025] ACM Sigsoft Distinguished Paper Award (ASE 2025)  </span> (ACM Sigsoft)
+							<br>&emsp;&emsp;&emsp;ACM杰出论文奖 (CCF-A类会议)
 						</li>
 						<li>
 							<span class="award-tag">[2024] ACM Sigsoft Distinguished Paper Award (ASE 2024)  </span> (ACM Sigsoft)
-							<br>&emsp;&emsp;&emsp;ACM杰出论文奖
+							<br>&emsp;&emsp;&emsp;ACM杰出论文奖 (CCF-A类会议)
+						</li>
+						<li>
+							<span class="award-tag">[2024] The Second-class Prize of the Graduate Academic Innovation Award </span> (Wuhan University)
+							<br>&emsp;&emsp;&emsp;武汉大学研究生学术创新二等奖
 						</li>
 						<li>
 							<span class="award-tag">[2024] The First-class Award of the 7th CCF Open Source Innovation Competition  </span> (China Computer Federation)
