--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 					</div>
 					<div class="person-footer">
 						<p>This page is powered by <em>Yi Song</em></p>
-						<p>Updated on <span class="footer">Nov 20, 2025</span>.</p>
+						<p>Updated on <span class="footer">Dec 8, 2025</span>.</p>
 					</div>
 				</div>
 			</div>
@@ -60,6 +60,11 @@
 					<p class="subtitle">&nbsp;&nbsp;Refereed Journals</p>
 					<p></p>
 					<ul class="paper">
+						<li class="">
+							<u>Yi Song</u>, Xiaoyuan Xie, Xihao Zhang, Qi Xin and Chenliang Xing. 
+							<strong><em>Exception Trigger Stream-based Fault Localization with Automated Try Block Injection.</em></strong> 
+							Journal of Software (软件学报), 2026. <font color = "blue">To Appear</font> <span class="badge badge-danger">New</span>
+						</li>
 						<li class="">
 							<u>Yi Song</u>, Xihao Zhang, Xiaoyuan Xie, Songqiang Chen, Quanming Liu and Ruizhi Gao. 
 							<strong><em>SURE: A Visualized Failure Indexing Approach using Program Memory Spectrum.</em></strong> 
@@ -167,6 +172,9 @@
 							<span class="award-tag">[2025] </span>入选湖北省博士后创新人才培养项目
 						</li>
 						<li>
+							<span class="award-tag">[2025] </span>获国家博后国境外学术交流专项资助
+						</li>
+						<li>
 							<span class="award-tag">[2024] </span>入选湖北省博士后尖端人才引进计划
 						</li>
 						<li>
@@ -185,6 +193,10 @@
 				<div class="awards-sect">
 					<h6><img src="img/award.png" class="section-icon">Awards</h4>
 					<ul class="paper">
+						<li>
+							<span class="award-tag">[2025] Young Talent Award of WuHan Association for Software Engineering </span> (WHASE)
+							<br>&emsp;&emsp;&emsp;武汉计算机软件工程学会青年才俊奖
+						</li>
 						<li>
 							<span class="award-tag">[2025] ACM Sigsoft Distinguished Paper Award (ASE 2025)  </span> (ACM Sigsoft)
 							<br>&emsp;&emsp;&emsp;ACM杰出论文奖 (CCF-A类会议)
