--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 					</div>
 					<div class="person-footer">
 						<p>This page is powered by <em>Yi Song</em></p>
-						<p>Updated on <span class="footer">Dec 8, 2025</span>.</p>
+						<p>Updated on <span class="footer">Dec 13, 2025</span>.</p>
 					</div>
 				</div>
 			</div>
@@ -63,7 +63,7 @@
 						<li class="">
 							<u>Yi Song</u>, Xiaoyuan Xie, Xihao Zhang, Qi Xin and Chenliang Xing. 
 							<strong><em>Exception Trigger Stream-based Fault Localization with Automated Try Block Injection.</em></strong> 
-							Journal of Software (软件学报), 2026. <font color = "blue">To Appear</font> <span class="badge badge-danger">New</span>
+							Ruan Jian Xue Bao / Journal of Software (软件学报), 2026. <font color = "blue">To Appear</font> <span class="badge badge-danger">New</span>
 						</li>
 						<li class="">
 							<u>Yi Song</u>, Xihao Zhang, Xiaoyuan Xie, Songqiang Chen, Quanming Liu and Ruizhi Gao. 
@@ -193,6 +193,10 @@
 				<div class="awards-sect">
 					<h6><img src="img/award.png" class="section-icon">Awards</h4>
 					<ul class="paper">
+						<li>
+							<span class="award-tag">[2025] Instructor of the first prize winner of the China Postgraduate Cybersecurity Innovation Competition </span>
+							<br>&emsp;&emsp;&emsp;中国研究生网络安全创新大赛全国一等奖指导教师
+						</li>
 						<li>
 							<span class="award-tag">[2025] Young Talent Award of WuHan Association for Software Engineering </span> (WHASE)
 							<br>&emsp;&emsp;&emsp;武汉计算机软件工程学会青年才俊奖
