--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
 						<p>This page is powered by <em>Yi Song</em></p>
 						<p>Updated on <span class="footer">Dec 13, 2025</span>.</p>
 					</div>
+					<div class="person-footer">
+					<center><a href="https://mapmyvisitors.com/web/1c19l"  title="Visit tracker"><img src="https://mapmyvisitors.com/map.png?d=VUE_vuHcFc2Jiv7aAY9Y1Pv-4TJE1r6BmOvJ06cydjI&cl=ffffff" /></a></center>
+					</div>
 				</div>
 			</div>
 			<!--Right part-->
@@ -279,7 +282,6 @@
 					</ul>
 				</div>
 				
-				
 			</div>
 		</div>
 	</div>
@@ -301,5 +303,6 @@
 			console.info("--------\nVisit on: "+time_str);
 		});
 	</script>
+	
 </body>
 </html>
