--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 						<p>Updated on <span class="footer">Dec 13, 2025</span>.</p>
 					</div>
 					<div class="person-footer">
-					<center><a href="https://mapmyvisitors.com/web/1c19l"  title="Visit tracker"><img src="https://mapmyvisitors.com/map.png?d=VUE_vuHcFc2Jiv7aAY9Y1Pv-4TJE1r6BmOvJ06cydjI&cl=ffffff" /></a></center>
+					<center><a href="https://mapmyvisitors.com/web/1c19y"  title="Visit tracker"><img src="https://mapmyvisitors.com/map.png?d=njeZL_slsk0Q_HE2jY4RFFs9PkDvGLkMDTGOaEGzQCg&cl=ffffff" /></a></center>
 					</div>
 				</div>
 			</div>
