--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 					</div>
 					<div class="person-footer">
 						<p>This page is powered by <em>Yi Song</em></p>
-						<p>Updated on <span class="footer">Dec 13, 2025</span>.</p>
+						<p>Updated on <span class="footer">Jan 8, 2026</span>.</p>
 					</div>
 					<div class="person-footer">
 					<center><a href="https://mapmyvisitors.com/web/1c19y"  title="Visit tracker"><img src="https://mapmyvisitors.com/map.png?d=njeZL_slsk0Q_HE2jY4RFFs9PkDvGLkMDTGOaEGzQCg&cl=ffffff" /></a></center>
@@ -66,7 +66,7 @@
 						<li class="">
 							<u>Yi Song</u>, Xiaoyuan Xie, Xihao Zhang, Qi Xin and Chenliang Xing. 
 							<strong><em>Exception Trigger Stream-based Fault Localization with Automated Try Block Injection.</em></strong> 
-							Ruan Jian Xue Bao / Journal of Software (软件学报), 2026. <font color = "blue">To Appear</font> <span class="badge badge-danger">New</span>
+							Ruan Jian Xue Bao / Journal of Software (软件学报), 2026 <span class="badge badge-danger">New</span> <a href="paper/JOS2026.pdf">[PDF]</a> <a href="https://www.jos.org.cn/jos/article/abstract/7583">[HTML]</a>
 						</li>
 						<li class="">
 							<u>Yi Song</u>, Xihao Zhang, Xiaoyuan Xie, Songqiang Chen, Quanming Liu and Ruizhi Gao. 
@@ -196,6 +196,11 @@
 				<div class="awards-sect">
 					<h6><img src="img/award.png" class="section-icon">Awards</h4>
 					<ul class="paper">
+						<li>
+							<span class="award-tag">[2025] Outstanding Postdoctoral Award </span> (Wuhan University)
+							<br>&emsp;&emsp;&emsp;武汉大学优秀博士后奖
+						</li>
+					
 						<li>
 							<span class="award-tag">[2025] Instructor of the first prize winner of the China Postgraduate Cybersecurity Innovation Competition </span>
 							<br>&emsp;&emsp;&emsp;中国研究生网络安全创新大赛全国一等奖指导教师
