--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
 					</div>
 					<div class="person-bike">
 						
-						<div class="bike bikeAni" data-container="body" data-toggle="popover" data-placement="top" data-content="2024, keep moving!"></div>
+						<div class="bike bikeAni" data-container="body" data-toggle="popover" data-placement="top" data-content="2026, keep moving!"></div>
 					</div>
 					<div class="person-footer">
 						<p>This page is powered by <em>Yi Song</em></p>
-						<p>Updated on <span class="footer">Jan 8, 2026</span>.</p>
+						<p>Updated on <span class="footer">Jan 18, 2026</span>.</p>
 					</div>
 					<div class="person-footer">
 					<center><a href="https://mapmyvisitors.com/web/1c19y"  title="Visit tracker"><img src="https://mapmyvisitors.com/map.png?d=njeZL_slsk0Q_HE2jY4RFFs9PkDvGLkMDTGOaEGzQCg&cl=ffffff" /></a></center>
@@ -134,6 +134,9 @@
 				<div class="services-sect">
 					<h6><img src="img/services.png" class="section-icon">Academic Services</h4>
 					<ul class="paper">
+						<li>
+							<span class="award-tag">特邀编委</span> -<a href="https://mp.weixin.qq.com/s/71ggutD-vhrEUL9SXg0zNQ">《武汉大学学报（理学版）》专刊</a>
+						</li>
 						<li>
 							<span class="award-tag">PC member</span> of the Technical Track of <a href="https://www.sigapp.org/sac/sac2026/">SAC 2026</a>
 						</li>
