--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 					</div>
 					<div class="person-footer">
 						<p>This page is powered by <em>Yi Song</em></p>
-						<p>Updated on <span class="footer">Feb 15, 2026</span>.</p>
+						<p>Updated on <span class="footer">Feb 26, 2026</span>.</p>
 					</div>
 					<div class="person-footer">
 					<center><a href="https://mapmyvisitors.com/web/1c19y"  title="Visit tracker"><img src="https://mapmyvisitors.com/map.png?d=njeZL_slsk0Q_HE2jY4RFFs9PkDvGLkMDTGOaEGzQCg&cl=ffffff" /></a></center>
@@ -96,7 +96,7 @@
 						<li class="">
 							<u>Yi Song</u>, Dongchen Xie, Lin Xu, He Zhang, Chunying Zhou and Xiaoyuan Xie.
 							<strong><em>Not Every Patch is an Island: LLM-Enhanced Identification of Multiple Vulnerability Patches.</em></strong> 
-							2025 40th IEEE/ACM International Conference on Automated Software Engineering (ASE’25) <font color = "blue">[CCF-A]</font> <img src="img/trophy.png" class="section-icon"><font color="#FF0000"><em>ACM Sigsoft Distinguished Paper Award</em></font> <span class="badge badge-danger">New</span>
+							2025 40th IEEE/ACM International Conference on Automated Software Engineering (ASE’25) <font color = "blue">[CCF-A]</font> <a href="paper/ASE2025.pdf">[PDF]</a> <a href="https://ieeexplore.ieee.org/abstract/document/11334340">[HTML]</a> <img src="img/trophy.png" class="section-icon"><font color="#FF0000"><em>ACM Sigsoft Distinguished Paper Award</em></font>
 						</li>
 						<li class="">
 							Xihao Zhang, <u>Yi Song (co-first author)</u>, Xiaoyuan Xie, Qi Xin and Chenliang Xing. 
